Change to HttpClient for News class connection